Backend Car endpoints, Cars db
