# Backend/DTOs/CarApi/ModelDto.cs
@@ -1,0 +1,12 @@
+namespace Backend.DTOs.CarApi
+{
+    public class ModelDto
+    {
+        public string? Id { get; set; }
+        public string? Name { get; set; }
+        public string? Slug { get; set; }
+        public string? MakeId { get; set; }
+        public string? MakeName { get; set; }
+    }
+}
+
